# prime-factorization

./: CMakeLists.txt  LICENSE  README.md  main.cpp
